--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -35,7 +39,6 @@
     "@storybook/test": "^8.4.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.3",
     "cypress": "^13.15.2",
     "eslint": "^9.13.0",
@@ -53,7 +56,8 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "eslintConfig": {
     "extends": [
